# coinbase_api

./: .gitignore  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: coinbase_api_request.py
initdb/: 001-create-user.sql
src/: extract.py
